<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Letrinhas04</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="entrar">Entrar</string>
    <string name="Menu">Menu</string>
    <string name="letrinhas">Letrinhas 0.4 </string>
    <string name="Recording">A gravar</string>
    <string name="start">Começar</string>
    <string name="stop">Parar</string>
    <string name="play">Ouvir</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_escolhe_teste">Escolher Teste</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sair">sair</string>
    <string name="voltar">voltar</string>
    <string name="teste">Teste</string>
    <string name="title_activity_esc_modo">Escolher Modo do teste</string>
    <string name="escolhe_Modo">Escolher o Modo do teste a realizar</string>
    <string name="porAluno">Por Aluno</string>
    <string name="porProf">Por Professor</string>
    <string name="title_activity_leitura_texto">Leitura de Textos</string>
    <string name="title_activity_leitura_palavras">Leitura de Palavras</string>
    <string name="concetList">ConectList</string>
    <string name="title_activity_texto">Teste de texto</string>
    <string name="title_activity_teste_texto">Teste de texto</string>
    <string name="title_activity_teste__imagem">Teste de imagens</string>
    <string name="title_activity_teste__palavras">Teste de palavras</string>
    <string name="title_activity_teste__poema">Teste de poema</string>
    <string name="login_title">Login Screen</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_autenticacao">Autenticacao</string>
    <string name="exemploTexto"> Atirei o pau ao gato \n 
        Mas o gato\n 
        Não morreu\n 
        A Dona Chica\n 
        Assustou-se\n 
        Com o berro, com o berro\n 
        Que o gato deu\n 
        Miau !!!\n \n 
        Sentado na chaminé!\n 
        Veio uma pulga,\n 
        morder-lhe o pé!\n 
        Ou ele chora,\n 
        ou ele grita:\n 
        -Vai-te embora!\n 
        -Pulga Maldita!!!</string>
    <string name="min"></string>
    <string name="sec"></string>
    <string name="vacilar">Vacilações</string>
    <string name="fragment">Fragmentações</string>
    <string name="silabac">Silabações</string>
    <string name="repeti">Repetições</string>
    <string name="exepriment">experiência</string>
    <string name="menos">menos</string>
    <string name="mais">mais</string>
    <string name="espaco">"                        "</string>
    <string name="numer">20</string>
    <string name="pErrada">P. Erradas:</string>
    <string name="listaPalavras1"> café\n papel\n filme\n volta\n rápido\n mundo\n trabalho\n leitura\n legendado\n sociedade\n filme\n firma\n descoberta\n importância\n informação\n</string>
    <string name="listaPalavras2"> propaganda\n validação\n normal\n cão\n chuva\n botas\n ontem\n maçã\n televisão\n viola\n caneta\n coelho\n computador\n  atualizarmos\n incompatível\n</string>
    <string name="listaPalavras3"> brinquedos\n alfaiate\n professora\n flor\n dentadura\n ténis\n raquete\n tinta\n livro\n almoço\n disco\n bicicleta\ seia\n guardanapo\n tinta\n guarda</string>
    <string name="listaPalavras4"> linha\n ligadura\n cinema\n aquecedor\n sofá\n cachecol\n almofada\n escadas\n pilar\n castanho\n cordas\n desempenho\n comunicação\n tartaruga\n ilha</string>
    <string name="poema1">A Luz de um Sonho\n\n\nUma vontade de sorrir\nNasce da luminosidade do luar\nSendo eu criança\nTudo me leva a sonhar\n\nCriança com sua alegria\nEspontânea e inconstante\nImagina o objecto mais brilhante\nPermanecendo assim este o seu guia\n\nCriança, de extrema fragilidade\nIngénua e empolgante\nTudo lhe é fascinante\n\nMas com seu sorriso\nMesmo o mais disparatado\nPossui alegria contagiante\nQue torna o Mundo mais belo e radiante !</string>
    <string name="title_activity_view_more_info">Ver mais Informação</string>
    <string name="title_all_tests">Ver mais Informação</string>
    <string name="btnback">Voltar</string>
    <string name="title_activity_all__tests">Todos os Testes</string>
    <string name="btnMainAllTest">Todos os Testes</string>
    <string name="btnMainSendResult">Criar e enviar Resultado de Teste</string>
    <string name="btnSendResult">Enviar Resultado</string>
    <string name="title_activity_send__result_test">Enviar Resultado de Teste</string>
    <string name="lb_mainIpServidor">IP do Servidor:</string>
    <string name="mainPorta">Porta:</string>
    <string name="title_activity_receber_imagem">ReceberImagem</string>
    <string name="btnReceberImagem">Ver imagem da BD Profs</string>
    <string name="title_activity_reprod_audio">ReprodAudio</string>
    <string name="title_activity_main_bd">MainBD</string>
    <string name="pontErrada">Pontuação</string>
    <string name="PalavraErrada">Palavra Errada</string>
    <string name="CancelarSeleccao">Cancelar Seleccao</string>
    <string name="Texto_Poema">Não sou nada.\n
Nunca serei nada.\n
Não posso querer ser nada.\n
À parte isso, tenho em mim todos os sonhos do mundo.\n\n

Janelas do meu quarto,\n
Do meu quarto de um dos milhões do mundo.\n
que ninguém sabe quem é\n
( E se soubessem quem é, o que saberiam?),\n
Dais para o mistério de uma rua cruzada constantemente por gente,\n
Para uma rua inacessível a todos os pensamentos,\n
Real, impossivelmente real, certa, desconhecidamente certa,\n
Com o mistério das coisas por baixo das pedras e dos seres,\n
Com a morte a por umidade nas paredes\n
e cabelos brancos nos homens,\n
Com o Destino a conduzir a carroça de tudo pela estrada de nada.\n\n

Estou hoje vencido, como se soubesse a verdade.\n
Estou hoje lúcido, como se estivesse para morrer,\n
E não tivesse mais irmandade com as coisas\n
Senão uma despedida, tornando-se esta casa e este lado da rua\n
A fileira de carruagens de um comboio, e uma partida apitada\n
De dentro da minha cabeça,\n
E uma sacudidela dos meus nervos e um ranger de ossos na ida.\n\n

Estou hoje perplexo, como quem pensou e achou e esqueceu.\n
Estou hoje dividido entre a lealdade que devo\n
À Tabacaria do outro lado da rua, como coisa real por fora,\n
E à sensação de que tudo é sonho, como coisa real por dentro.\n\n

Falhei em tudo.\n
Como não fiz propósito nenhum, talvez tudo fosse nada.\n
A aprendizagem que me deram,\n
Desci dela pela janela das traseiras da casa.</string>
    <string name="title_activity_resultado">Resultado</string>
    <string name="resultado">Resultado do teste</string>
    <string name="avancar">Avançar</string>
    <string name="syncro">Sincronizar BD</string>
    <string name="act_BD">Atualizar a Base de Dados</string>
    <string name="title_activity_escolhe_escola">Escolher Escola</string>
    <string name="escola">escola</string>
    <string name="title_activity_escolhe_ano">Escolher Ano</string>
    <string name="ano">ano</string>
    <string name="title_activity_escolhe_aluno">Escolher Aluno</string>
    <string name="aluno">Aluno</string>
    <string name="title_activity_escolhe_professor">Escolher Professor</string>
    <string name="professor">Professor</string>
    <string name="nomeTeste">Nome do teste</string>
    <string name="tempoLeitura">Tempo de leitura</string>
    <string name="expressividade">Expressividade</string>
    <string name="ritmo">Ritmo</string>
    <string name="nota">Nota</string>
    <string name="perguntaImagem">perguntaImagem</string>
    <string name="agrupamento">Agrupamento Artur Gonçalves</string>
    <string name="escProfessor">Escolher Professor</string>
<<<<<<< HEAD
    <string name="title_activity_escolhe__turma">Escolher Turma</string>
    <string name="escolherTurma">Escolher Turma</string>
    <string name="title_activity_escolhe__aluno">Escolher Aluno</string>
    <string name="escolherAluno">Escolher Aluno</string>
    <string name="title_activity_escolhe_modo">Escolher Modo</string>
    <string name="escolherModo">Escolher Modo</string>
    <string name="title_activity_escolhe__modo">Escolher Modo</string>
    <string name="realizarTeste">Realizar teste</string>
    <string name="corrigirTeste">Corrigir teste</string>
    <string name="title_activity_teste__texto">Teste de texto</string>
    <string name="cancel">cancelar</string>
    <string name="iniciar">iniciar</string>
    <string name="demo">ouvir demo</string>

=======
    <string name="portugues">Português</string>
	<string name="ingles">Inglês</string>
	<string name="estMeio">Estudo do meio</string>
	<string name="matematica">Matemática</string>
	<string name="escolheDisciplina">Selecione a disciplina</string>
	<string name="escolheTipoTeste">Selecione o tipo de teste</string>
	<string name="leituraPalavras">Leitura\nde palavras</string>
	<string name="leituraTextos">Leitura\nde textos</string>
	<string name="interpretaçãoImagens">Interpretação\natravés de imagens</string>
>>>>>>> refs/remotes/origin/master
</resources>
