<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/escDisciplina"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80bb00"
    android:gravity="clip_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="30sp"
    android:paddingRight="30sp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape"
    tools:context="com.letrinhas04.escolhe.EscolheDisciplina" >

    <TextView
        android:id="@+id/escDCabecalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/logo2"
        android:text="@string/escolheDisciplina"
        android:textColor="#5ddfff"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDVoltar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/voltar"
        android:drawableTop="@drawable/voltar"
        android:scaleType="fitCenter"
        android:text="@string/voltar" />

    <Button
        android:id="@+id/estMeio"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignTop="@+id/mat"
        android:layout_toRightOf="@+id/mat"
        android:drawableTop="@drawable/estmeio"
        android:scaleType="fitCenter"
        android:text="@string/estMeio"
        android:textColor="#30aa30"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/english"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignTop="@+id/estMeio"
        android:layout_toRightOf="@+id/estMeio"
        android:drawableTop="@drawable/en"
        android:scaleType="fitCenter"
        android:text="@string/ingles"
        android:textColor="#5050dd"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mat"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_alignTop="@+id/pt"
        android:layout_toRightOf="@+id/pt"
        android:drawableTop="@drawable/mat"
        android:scaleType="fitCenter"
        android:text="@string/matematica"
        android:textColor="#0000aa"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/pt"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_below="@+id/escDCabecalho"
        android:layout_marginTop="133dp"
        android:layout_toRightOf="@+id/btnDVoltar"
        android:drawableTop="@drawable/pt"
        android:scaleType="fitCenter"
        android:text="@string/portugues"
        android:textColor="#aa0000"
        android:textSize="35sp"
        android:textStyle="bold" />

</RelativeLayout>