<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtTeste"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:configChanges="orientation|keyboardHidden|screenSize"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="40sp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape"
    tools:context="com.letrinhas.testes.Teste_Texto" >

    <TextView
        android:id="@+id/Cabecalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/logo"
        android:layout_toRightOf="@+id/logo"
        android:text="@string/title_activity_teste_texto"
        android:textColor="#5ddfff"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Cabecalho"
        android:layout_below="@+id/Cabecalho"
        android:text="Aluno escolhido"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/letrinhas"
        android:src="@drawable/letrinhas" />

    <LinearLayout
        android:id="@+id/txtPainel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/logo"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btListen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0099cc"
            android:drawableTop="@drawable/paly_off"
            android:text="@string/demo"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btSubmeter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150sp"
            android:background="#0099cc"
            android:drawableTop="@drawable/valido"
            android:text="@string/avancar"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:background="#0099cc"
            android:drawableTop="@drawable/cancelar"
            android:text="@string/cancel"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnVoltar"
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:background="#0099cc"
            android:contentDescription="@string/voltar"
            android:drawableTop="@drawable/voltar"
            android:onClick="voltar"
            android:text="@string/voltar"
            android:textSize="20sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/txtPainel"
        android:layout_toLeftOf="@+id/txtPainel" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/scrollView1"
        android:background="#0099cc"
        android:drawableTop="@drawable/record"
        android:text="@string/iniciar"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btRecord"
        android:layout_alignTop="@+id/btRecord"
        android:layout_toLeftOf="@+id/btRecord"
        android:layout_marginRight="10sp"
        
        android:background="#0099cc"
        android:drawableTop="@drawable/play"
        android:text="@string/play"
        android:textSize="25sp"
        android:textStyle="bold" />

</RelativeLayout>