<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/escModo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:configChanges="orientation|keyboardHidden|screenSize"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="40sp"
    android:paddingRight="40sp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape"
    tools:context="com.letrinhas04.Escolhe_Modo" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/letrinhas"
        android:src="@drawable/letrinhas" />

    <TextView
        android:id="@+id/Rodape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnVoltar"
        android:layout_marginLeft="10sp"
        android:layout_toRightOf="@+id/btnVoltar"
        android:text="@string/letrinhas"
        android:textColor="#5ddfff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/voltar"
        android:drawableTop="@drawable/voltar"
        android:onClick="voltar"
        android:text="@string/voltar" />

    <TextView
        android:id="@+id/Cabecalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/logo"
        android:layout_toRightOf="@+id/logo"
        android:text="@string/escolherModo"
        android:textColor="#5ddfff"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Escola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Cabecalho"
        android:layout_below="@+id/Cabecalho"
        android:text="Escola escolhida"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivProfessor"
        android:layout_toLeftOf="@+id/ivProfessor"
        android:text="Professor escolhido"
        android:textSize="30sp" />

    <ImageView
        android:contentDescription="@string/professor"
        android:id="@+id/ivProfessor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Cabecalho"
        android:src="@drawable/professora" />

    <TextView
        android:id="@+id/Turma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ivProfessor"
        android:layout_alignTop="@+id/Rodape"
        android:text="Turma Escolhida"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <Button
            style="@style/ButtonBarButton"
            android:id="@+id/btModoAluno"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginRight="100sp"
            android:background="#0099cc"
            android:drawableTop="@drawable/boy"
            android:text="@string/realizarTeste"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            style="@style/ButtonBarButton"
            android:id="@+id/btModoProf"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100sp"
            android:background="#0099cc"
            android:drawableTop="@drawable/docentes"
            android:text="@string/corrigirTeste"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>