<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/escTeste"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:configChanges="orientation|keyboardHidden|screenSize"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="40sp"
    android:paddingRight="40sp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape"
    tools:context="com.letrinhas04.Escolhe_teste" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/letrinhas"
        android:src="@drawable/letrinhas" />

    <TextView
        android:id="@+id/Rodape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnVoltar"
        android:layout_marginLeft="10sp"
        android:layout_toRightOf="@+id/btnVoltar"
        android:text="@string/letrinhas"
        android:textColor="#5ddfff"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/voltar"
        android:drawableTop="@drawable/voltar"
        android:onClick="voltar"
        android:text="@string/voltar" />

    <TextView
        android:id="@+id/Cabecalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/logo"
        android:layout_toRightOf="@+id/logo"
        android:text="@string/title_activity_escolhe_teste"
        android:textColor="#5ddfff"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Escola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Cabecalho"
        android:layout_below="@+id/Cabecalho"
        android:text="Escola escolhida"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivProfessor"
        android:layout_toLeftOf="@+id/ivProfessor"
        android:text="Professor escolhido"
        android:textSize="30sp" />

    <ImageView
        android:contentDescription="@string/professor"
        android:id="@+id/ivProfessor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Cabecalho"
        android:src="@drawable/professora" />

    <ImageView
        android:id="@+id/ivAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/professor"
        android:src="@drawable/boy1" />

    <TextView
        android:id="@+id/tvAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivAluno"
        android:layout_toLeftOf="@+id/ivAluno"
        android:text="Aluno escolhido"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/Turma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30sp"
        android:layout_alignBaseline="@+id/tvAluno"
        android:layout_alignBottom="@+id/tvAluno"
        android:layout_toLeftOf="@+id/tvAluno"
        android:text="Turma Escolhida"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/ivDisciplina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ivProfessor"
        android:layout_alignRight="@+id/ivProfessor"
        android:layout_below="@+id/tvProf"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/professor"
        android:src="@drawable/textos" />

    <Button
        android:id="@+id/btCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ivAluno"
        android:layout_alignLeft="@+id/ivDisciplina"
        android:layout_alignRight="@+id/ivDisciplina"
        android:layout_marginBottom="35dp"
        android:drawableTop="@drawable/right"
        android:text="@string/avancar" />

    <ScrollView
        android:id="@+id/svEscTeste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnVoltar"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignRight="@+id/tvAluno"
        android:layout_below="@+id/tvProf"
        android:background="#806060" >

        <LinearLayout
            android:id="@+id/llescTeste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ToggleButton
                android:id="@+id/ToggleButton01"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5sp"
                android:text="@string/teste"
                android:textOff="@string/teste"
                android:textOn="@string/teste"
                android:textSize="30sp"
                android:textStyle="bold" 
                style="@style/ButtonBarButton"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
